# rocketseat_python_solid_principles

./: .gitignore  .pre-commit-config.yaml  Desafio.txt  LICENSE  README.md  pyproject.toml
examples/: 0_ solid_principles.txt
examples/1_S_SRP/: srp_example.py
examples/2_O_OCP/: ocp_example.py
examples/3_L_LSP/: lsp_example.py
examples/4_I_ISP/: isp_example.py
examples/5_D_DIP/: dip_example.py
scripts/: build.sh  lint.sh  test.sh
src/1_S_SRP/: srp_revised_example.py
src/2_O_OCP/: ocp_revised_example.py
